# IUT-ClientServeur-Projet

./: .gitignore  CMakeLists.txt  IUT-ClientServeur-MiniProjet.pro  Makefile  README.md
client/: README.md  client  client.cpp  client.pro
common/: cause.cpp  common.pro  conf.h  util.cpp  util.h
server/: pool.cpp  pool.h  server  server.cpp  server.pro
src/client/: client.cpp
src/common/: User.cpp  User.h  cause.h  conf.h  grid.cpp  grid.h  protocol.h  socket.cpp  socket.h  util.cpp
src/server/: Pool.cpp  Pool.h  Pools.cpp  Pools.h  pool.cpp  pool.h  server.cpp
